--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <title>Upfront</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
@@ -26,10 +27,13 @@
               <p class="mt-6 text-lg leading-8 text-[#166534]">— The Upfront Team</p>
             </div>
           </div>
-          <div class="mb-8 flex justify-center">
-            <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600">
-                See below for our pro recommendations for Home Services in Marin County. <a href="https://airtable.com" target="_blank" class="font-semibold" style="color: #166534"><span class="" aria-hidden="true"></span>Database link <span aria-hidden="true">&rarr;</span></a>
+          <div class="mb-2 flex justify-center">
+            <div class="relative rounded-full px-3 py-1 text-md leading-6 text-gray-600">
+                See below for our pro recommendations for Home Services in Marin County. <a href="https://airtable.com/appWLHg8FeYtp5zwC/shrE5cFTQH0Aaq38g/tblqI29xBpTqg0iW0" target="_blank" class="font-semibold" style="color: #166534"><span class="" aria-hidden="true"></span>Database link <span aria-hidden="true">&rarr;</span></a>
             </div>
+          </div>
+          <div class="flex lg:flex-1 justify-center">
+            <iframe class="airtable-embed w-full md:w-1/2" src="https://airtable.com/embed/appWLHg8FeYtp5zwC/shrE5cFTQH0Aaq38g?viewControls=on" frameborder="0" onmousewheel="" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
           </div>
         </div>
       </div>
