--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <div class="mx-auto max-w-2xl  py-32">
             <div class="text-center">
               <h1 class="text-4xl font-bold tracking-tight sm:text-6xl" style="color: #166534">Thanks for joining us</h1>
-              <p class="mt-6 text-lg leading-8 text-[#166534]">We've made the difficult decision to shut down our company. We're proud of the impact we made, and it's been a joy to work all our customers and pros.</p>
+              <p class="mt-6 text-lg leading-8 text-[#166534]">We've made the difficult decision to shut down Upfront. We're proud of the impact we made, and it's been a joy to work with all of our customers and pros.</p>
               <p class="mt-6 text-lg leading-8 text-[#166534]">— The Upfront Team</p>
             </div>
           </div>
           <div class="mb-2 flex justify-center">
             <div class="relative rounded-full px-3 py-1 text-md leading-6 text-gray-600">
-                See below for our pro recommendations for Home Services in Marin County. <a href="https://airtable.com/appWLHg8FeYtp5zwC/shrE5cFTQH0Aaq38g/tblqI29xBpTqg0iW0" target="_blank" class="font-semibold" style="color: #166534"><span class="" aria-hidden="true"></span>Database link <span aria-hidden="true">&rarr;</span></a>
+              Below are fantastic independent pros we’d recommend for your next home project in Marin County: <a href="https://airtable.com/appWLHg8FeYtp5zwC/shrE5cFTQH0Aaq38g/tblqI29xBpTqg0iW0" target="_blank" class="font-semibold" style="color: #166534"><span class="" aria-hidden="true"></span>Database link <span aria-hidden="true">&rarr;</span></a>
             </div>
           </div>
           <div class="flex lg:flex-1 justify-center">
